# AI-Notes

./: .gitignore
backend/: pyproject.toml  run.py
backend/app/: __init__.py
backend/app/ai/: flashcards.py  summarizer.py
backend/app/db/: db.py  db_funcs.py  schemas.py
backend/app/routes/: auth.py  flashcards_routes.py  sign_up.py  summary_routes.py  upload_routes.py
backend/app/utils/: file_ops.py  helpers.py
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  auth.tsx  index.css
frontend/src/components/: Button.tsx  ComingSoon.tsx  helpers.ts
frontend/src/components/Auth/: Lock.tsx  Login.tsx  SignUp.tsx
frontend/src/components/FileUpload/: FileDropZone.tsx  FileItem.tsx  FileList.tsx  MdVisualizer.tsx  SummaryPanel.tsx  UploadButton.tsx
frontend/src/components/Flashcards/: Flashcards.tsx
frontend/src/components/Summary/: MdVisualizer.tsx  Summary.tsx  SummaryPanel.tsx
